--- a/templates/index.html
+++ b/templates/index.html
@@ -35,13 +35,13 @@
 				<input class = "col-xs-12" type="text" id="signUpName" placeholder="Name">
 				<input class = "col-xs-12" type="text" id="signUpUsername" placeholder="Username">
 				<input class = "col-xs-12" type="password" id="signUpPassword" placeholder="Password">
-				<input style="text-align:center" type="submit" id="signUpSubmit" placeholder="Sign Up">
+				<button class="btn btn-success col-xs-12" type="button" id="signUpSubmit">Sign Up</button>
 			</div>
 			<div id="signIn">
 				<h3>Sign In</h3>
 				<input class = "col-xs-12" type="text" id="signInUsername" placeholder="Username">
 				<input class = "col-xs-12" type="password" id="signInPassword" placeholder="Password">
-				<input style="text-align:center" type="submit" id="signInSubmit" placeholder="Sign In">
+				<button class="btn btn-primary col-xs-12" type="button" id="signInSubmit">Sign In</button>
 			</div>
 		</div>
 	</body>
